# jubilant-goggles

./: .gitignore  README.md  instructions  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bandit.yml  codacy.yml
configs/: default.yml
examples/: vulnerable_javascript.js  vulnerable_python.py
mlsecscan/: __init__.py  __main__.py  cli.py  csharpsample.cs  sampleruletest.py
mlsecscan/analysis/: __init__.py  ast.py  complexity.py  taint.py
mlsecscan/core/: __init__.py  config.py  engine.py  finding.py  registry.py  rule.py
mlsecscan/parsing/: __init__.py  treesitter.py
mlsecscan/remediation/: __init__.py
mlsecscan/reporting/: __init__.py  formatters.py
mlsecscan/rules/: __init__.py  complexity.py  hardcoded_secret.py  sql_injection.py  xss.py
mlsecscan/utils/: __init__.py  diff.py  files.py  location.py
securityscanner/: __init__.py  __main__.py  cli.py  config.py
securityscanner/analyzers/: __init__.py  base.py  javascript_analyzer.py  python_analyzer.py
securityscanner/core/: __init__.py  engine.py  findings.py  rules.py  taint.py
securityscanner/formatters/: __init__.py  cli.py  json_formatter.py  sarif.py
securityscanner/parsers/: __init__.py  base.py  generic.py  javascript_parser.py  python_parser.py
securityscanner/remediation/: __init__.py  engine.py  fixers.py
securityscanner/rules/: __init__.py
securityscanner/rules/quality/: __init__.py  complexity.py  error_handling.py  naming.py
securityscanner/rules/security/: __init__.py  crypto.py  (+4 more)
securityscanner/utils/: __init__.py
tests/: __init__.py  test_scanner.py
